<resources>
    <string name="app_name">BioTap</string>
    <string name="action_settings">Settings</string>
    <string name="grid_image">grid image</string>
    <string name="Grid">Grid</string>
    <!--- Activity view names. -->
    <string name="mainMenu">Main Menu</string>
    <string name="register">Register</string>
    <string name="login">Enter Passkey</string>
    <string name="database">Attempt Database</string>
    <string name="statistics">Statistics</string>
    <!--- Button names. -->
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="back_btn">Back</string>
    <!--- The statistics on the Statistics view, changed through the
        Statistics class depending on user data. -->
    <string name="statText01">0</string>
    <string name="statText02">0%</string>
    <string name="statText03">0</string>
    <string name="statText04">0</string>
    <string name="statText05">0</string>
    <string name="statText06">0</string>
    <string name="statText07">0</string>
    <!--- Statistics title on the Statistics view. -->
    <string name="statTitle00">BIO-STATS</string>
    <string name="statTitle01">Passkey Attempts: </string>
    <string name="statTitle02">Acceptance Rate: </string>
    <string name="statTitle03">Last Score: </string>
    <string name="statTitle04">Passable Score: </string>
    <string name="statTitle05">Coordinates Weight: </string>
    <string name="statTitle06">Duration Weight: </string>
    <string name="statTitle07">Timing Weight: </string>
    <!--- Button names on the Statistic view. -->
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="statButt01">Detailed Analysis</string>
    <string name="statButt02">Delete All Data/Reset Weights</string>
    <string name="buttSet01"> Edit Passable Score</string>
    <string name="buttSet02"> Edit Coordinate Weight</string>
    <string name="buttSet03"> Edit Duration Weight</string>
    <string name="buttSet04"> Edit Timing Weight</string>
    <!--- Database activity string names. -->
    <string name="dataMean">Passkey Mean</string>
    <string name="dataMeanDisplay">0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0</string>
    <string name="dataSd">Passkey Standard Deviation</string>
    <string name="dataSdDisplay">0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0, 0/0/0/0</string>
    <string name="dataAttempt01">0.00</string>
    <string name="dataAttempt02">0.00</string>
    <string name="dataAttempt03">0.00</string>
    <string name="dataAttemptTitle04">Resulting Score: </string>
    <string name="dataAttempt04">0,000.00</string>
</resources>
