<?xml version="1.0" encoding="utf-8"?>
<!--- content_database.xml
    @version(2016.1.6)              @author(Cameron Dziurgot)
    Skeleton of view that will eventually compile a list of passkeys
    and display them to a user to analyze. Should contain not only the
    passkeys, but the score it received as well as the weights during
    that score.                                                     -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    <TextView
        android:id="@+id/dataTitle"
        android:text="@string/database"
        android:textSize="30sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--- String of mean passkey and title. -->
    <TextView
        android:id="@+id/dataMean"
        android:text="@string/dataMean"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/dataMeanDisplay"
        android:text="@string/dataMeanDisplay"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--- String of standard deviation passkey and title. -->
    <TextView
        android:id="@+id/dataSd"
        android:text="@string/dataSd"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/dataSdDisplay"
        android:text="@string/dataSdDisplay"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--- Title table to show how weights affect score. -->
    <TableRow
        android:id="@+id/rowTitleAttempt"
        android:weightSum="4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/attemptTitle01"
            android:text="@string/statTitle05"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/attemptTitle02"
            android:text="@string/statTitle06"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/attemptTitle03"
            android:text="@string/statTitle07"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/attemptTitle04"
            android:text="@string/dataAttemptTitle04"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <!--- Dummy example of weights and score. -->
    <ScrollView
        android:id="@+id/attemptScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/rowAttempt01"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dataAttempt01"
                android:text="@string/dataAttempt01"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/dataAttempt02"
                android:text="@string/dataAttempt02"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/dataAttempt03"
                android:text="@string/dataAttempt03"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/dataAttempt04"
                android:text="@string/dataAttempt04"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </ScrollView>
</LinearLayout>