<?xml version="1.0" encoding="utf-8"?>
<!--- content_menu.xml
    @version(Original)          @author(Travis Moretz)
    Main menu/Home screen of application. Buttons redirect to various
    areas of the application.
    @version(2015.12.31)        @editor(Cameron Dziurgot)
    Code formatting and comments added. Format can/should be changed
    to LinearLayout rather than RelativeLayout.
    @version(2016.1.6)  Added DB button. Order is name image on top,
    then register, passkey, statistics, and then database button at
    the bottom.                                                     -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_menu"
    tools:context="pistachio.com.biotap.Menu"
    tools:ignore="contentDescription"
    android:background="#fff">

    <!--- BioTap Logo. Set to be at top of page. -->
    <ImageView android:id="@+id/imageView"
        android:src="@drawable/biotap"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"

        android:layout_alignParentTop="true"
        android:layout_above="@+id/register_btn" />

    <!--- Register button. Sends user to Register View. -->
    <Button android:id="@+id/register_btn"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#4CAF50"
        android:singleLine="false"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"

        android:layout_above="@+id/login_btn" />
    <!--- Login Button. Currently set to send user to a passkey Login View. -->
    <Button android:id="@+id/login_btn"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#4CAF50"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"

        android:layout_above="@+id/stat_btn" />
    <!--- Statistics button. Currently set to send user to Statistics view. -->
    <Button android:id="@+id/stat_btn"
        android:text="@string/statistics"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#4CAF50"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"

        android:layout_above="@+id/data_btn" />

    <!--- View all attempts on the current saved passkey. -->
    <Button android:id="@+id/data_btn"
        android:text="@string/database"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#4CAF50"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
